--- a/src/App.scss
+++ b/src/App.scss
@@ -23,8 +23,9 @@ header div {
 }
 
 #gallery-page,
-#library-page {
-  width: 100vw;
+#library-page,
+#book_page {
+  width: 100%;
   height: 100vh;
 
   & h1.title {
@@ -86,9 +87,22 @@ header div {
   & .library_container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    width: 1000px;
+    max-width: 1000px;
+    width: 100%;
     margin: 0 auto;
     padding-top: 3rem;
+
+    @media (max-width: 1000px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 480px) {
+      grid-template-columns: 1fr;
+    }
 
     & .book_container {
       display: flex;
@@ -101,6 +115,23 @@ header div {
       &:hover {
         transform: scale(1.1);
       }
+    }
+  }
+
+  & .book_container {
+    display: flex;
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 3rem;
+
+    @media (max-width: 1000px) {
+      flex-direction: column;
+    }
+
+    & .image_container {
+      display: flex;
+      justify-content: center;
     }
   }
 }
