--- a/src/App.scss
+++ b/src/App.scss
@@ -135,3 +135,42 @@ header div {
     }
   }
 }
+
+// ::view-transition-old(root),
+// ::view-transition-new(root) {
+//   animation-duration: 3s;
+// }
+
+// @keyframes fade-in {
+//   from {
+//     opacity: 0;
+//   }
+// }
+
+// @keyframes fade-out {
+//   to {
+//     opacity: 0;
+//   }
+// }
+
+// @keyframes slide-from-rigth {
+//   from {
+//     transform: translate3d(30px);
+//   }
+// }
+
+// @keyframes slide-to-left {
+//   to {
+//     transform: translateX(-30px);
+//   }
+// }
+
+// ::view-transition-old(root) {
+//   animation: 300ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+//     700ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+// }
+
+// ::view-transition-new(root) {
+//   animation: 210ms cubic-bezier(0, 0, 0.2, 1) 300ms both fade-in,
+//     700ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-rigth;
+// }
